2001-06-13  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.[ch]: Moved to libgnome-extra/libgnomeui.
	* gnome-selector-dialog-client.[ch]: Likewise.
	* gnome-selector-component.[ch]: Likewise.

	* gnome-selector-widget.[ch]: Renamed to gnome-component-widget.[ch].

2001-06-12  Martin Baulig  <baulig@suse.de>

	* libgnomeui-2.0.pc.in: Depend on libgnomecanvas-2.0, but not on gconf-2.0.

	* gnome-cursors.c (build_cursor_table): Commented this out.
	(FIXME: gnome-cursors.[ch] will go away, fix all code which is still
	using it).

	* gnome-gconf.[ch]: Removed.

2001-06-11  Cody Russell  <bratsche@gnome.org>

	* wap-textfu.c: Fix small warning so we can build with -Werror.

	* Makefile.am: Add GCONF_CFLAGS and GCONF_LIBS.

2001-06-10  Chema Celorio  <chema@celorio.com>

	* gnome-selector-client.c (gnome_selector_client_construct_from_objref):
	remove a g_return_if_fail for an unitialized variable

2001-06-10  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Disabled gnome-paper-selector.[ch] and gnome-unit-spinner.[ch].
	We need to move them into libgnomeprint, same for libgnome/gnome-paper.[ch].

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (BONOBO_TYPE_FUNC_FULL): Use Bonobo_Unknown instead
	of GNOME_SelectorClient so that we can kill this interface.

2001-06-05  Mike Kestner  <mkestner@speakeasy.net>

	* gnome-client.c : #endif token removed
	* gnome-init.c (GnomeProgramPrivate_libgnomeui): added display, icon,
	and crash_dialog fields.
	(libgnomeui_get_property): handle icon, display, and crash_dlg params
	(libgnomeui_set_property): handle icon, display, and crash_dlg params

2001-06-04  Martin Baulig  <baulig@suse.de>

	* gnome-selector-widget.[ch]: New files.

	* gnome-selector-client.[ch]: Derive from BonoboObject, not BonoboWidget.
	(gnome_selector_client_new_from_objref): Take a Bonobo_Unknown, not a GNOME_Selector.
        (gnome_selector_client_construct_from_objref): Likewise.
